Remove warnings at JVM start